--- a/src/output/authors.html
+++ b/src/output/authors.html
@@ -18,8 +18,6 @@
 
 
 
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
 
     <!-- Chrome, Firefox OS and Opera -->
@@ -40,6 +38,7 @@
 <meta property="og:description" content="Academic website and blog"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
+<meta property="og:image" content="/images/me.jpg">
 
   <title>Hubert J. Banville &ndash;     Authors
 </title>
@@ -49,15 +48,14 @@
   <aside>
     <div>
       <a href="">
-        <img src="/theme/img/profile.png" alt="" title="">
+        <img src="/images/me.jpg" alt="Hubert J. Banville" title="Hubert J. Banville">
       </a>
-      <h1><a href=""></a></h1>
+      <h1><a href="">Hubert J. Banville</a></h1>
 
-<p>PhD student @ Inria, Parietal Team <br> Biosignal Researcher @ InteraXon Inc.</p>
+<p><b>PhD student</b> @ Inria, Parietal Team <br> <b>Biosignal Researcher</b> @ InteraXon Inc.</p>
       <nav>
         <ul class="list">
-          <li><a href="/pages/about.html#about">About</a></li>
-          <li><a href="/pages/others.html#others">Others</a></li>
+          <li><a href="/pages/about-me.html#about-me">About me</a></li>
           <li><a href="/pages/research.html#research">Research</a></li>
 
         </ul>
@@ -66,7 +64,7 @@
       <ul class="social">
         <li><a class="sc-github" href="https://github.com/hubertjb" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-linkedin" href="https://linkedin.ca/in/hubertbanville" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="sc-scholar" href="https://scholar.google.com/citations?user=Qoh3xVgAAAAJ&hl=en" target="_blank"><i class="fa fa-scholar"></i></a></li>
+        <li><a class="sc-book" href="https://scholar.google.com/citations?user=Qoh3xVgAAAAJ&hl=en" target="_blank"><i class="fa fa-book"></i></a></li>
       </ul>
     </div>
 
@@ -82,7 +80,6 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="/author/hubert-j-banville.html">Hubert J. Banville</a> (2)</li>
     </ul>
   </div>
 </article>
@@ -102,7 +99,7 @@
   "@type" : "Blog",
   "name": " Hubert J. Banville ",
   "url" : "",
-  "image": "",
+  "image": "/images/me.jpg",
   "description": "Academic website and blog"
 }
 </script>
