--- a/src/output/pages/research.html
+++ b/src/output/pages/research.html
@@ -18,8 +18,6 @@
 
 
 
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
 
     <!-- Chrome, Firefox OS and Opera -->
@@ -40,6 +38,7 @@
 <meta property="og:description" content="Academic website and blog"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
+<meta property="og:image" content="/images/me.jpg">
 
   <title>Hubert J. Banville &ndash; Research</title>
 
@@ -48,15 +47,14 @@
   <aside>
     <div>
       <a href="">
-        <img src="/theme/img/profile.png" alt="" title="">
+        <img src="/images/me.jpg" alt="Hubert J. Banville" title="Hubert J. Banville">
       </a>
-      <h1><a href=""></a></h1>
+      <h1><a href="">Hubert J. Banville</a></h1>
 
-<p>PhD student @ Inria, Parietal Team <br> Biosignal Researcher @ InteraXon Inc.</p>
+<p><b>PhD student</b> @ Inria, Parietal Team <br> <b>Biosignal Researcher</b> @ InteraXon Inc.</p>
       <nav>
         <ul class="list">
-          <li><a href="/pages/about.html#about">About</a></li>
-          <li><a href="/pages/others.html#others">Others</a></li>
+          <li><a href="/pages/about-me.html#about-me">About me</a></li>
           <li><a href="/pages/research.html#research">Research</a></li>
 
         </ul>
@@ -65,7 +63,7 @@
       <ul class="social">
         <li><a class="sc-github" href="https://github.com/hubertjb" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-linkedin" href="https://linkedin.ca/in/hubertbanville" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="sc-scholar" href="https://scholar.google.com/citations?user=Qoh3xVgAAAAJ&hl=en" target="_blank"><i class="fa fa-scholar"></i></a></li>
+        <li><a class="sc-book" href="https://scholar.google.com/citations?user=Qoh3xVgAAAAJ&hl=en" target="_blank"><i class="fa fa-book"></i></a></li>
       </ul>
     </div>
 
@@ -80,12 +78,33 @@
     <h1 id="research">Research</h1>
   </header>
   <div>
-<h2>Journal papers</h2>
-<p>...</p>
-<h2>Conference</h2>
-<p>...</p>
-<h1>Others</h1>
-<p>...</p>  </div>
+<h2>Journals</h2>
+<p><a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab260c/pdf">Deep learning-based electroencephalography analysis: a systematic review</a><br>
+Yannick Roy*, <strong>Hubert Banville</strong>*, Isabela Albuquerque, Alexandre Gramfort, Jocelyn Faubert<br>
+<em>Journal of Neural Engineering</em>, 2019</p>
+<p><a href="http://downloads.hindawi.com/journals/cin/2017/3524208.pdf">Mental Task Evaluation for Hybrid NIRS-EEG Brain-Computer Interfaces</a><br>
+<strong>Hubert Banville</strong>, Rishabh Gupta, Tiago H. Falk<br>
+<em>Computational Intelligence and Neuroscience</em>, 2017</p>
+<p><a href="https://www.tandfonline.com/doi/abs/10.1080/2326263X.2015.1134958">Recent advances and open challenges in hybrid brain-computer interfacing: a technological review of non-invasive human research</a><br>
+<strong>Hubert Banville</strong>, Tiago H. Falk<br>
+<em>Brain-Computer Interfaces</em>, 2016</p>
+<h2>Conferences and workshops</h2>
+<p><a href="">Self-supervised representation learning from electroencephalography signals</a><br>
+<strong>Hubert Banville</strong>, Isabela Albuquerque, Aapo Hyvärinen, Graeme Moffat, Denis Engemann, Alexandre Gramfort<br>
+<em>IEEE International Workshop on Machine Learning for Signal Processing</em>, 2019</p>
+<p><a href="">EEG 101: A practical, interactive, free &amp; open source app for use with low-cost mobile EEG in neuroscience education</a><br>
+Dano Morisson, <strong>Hubert Banville</strong>, Tom McNeely, Nicole Proulx, Graeme Moffat, Geordan King<br>
+<em>Society for Neuroscience</em>, 2018</p>
+<p><a href="https://www.sciencedirect.com/science/article/pii/B9780128119266000579">Toward Mental Workload Measurement Using Multimodal EEG–fNIRS Monitoring</a><br>
+<strong>Hubert Banville</strong>, Mark Parent, Sébastien Tremblay, Tiago H. Falk<br>
+<em>International Neuroergonomics Conference</em>, 2016</p>
+<p><a href="http://musaelab.ca/pdfs/C90A.pdf">MuLES: An open source EEG acquisition and streaming server for quick and simple prototyping and recording</a><br>
+Raymundo Cassani, <strong>Hubert Banville</strong>, Tiago H. Falk<br>
+<em>International Conference on Intelligent User Interfaces Companion</em>, 2015</p>
+<h2>Others</h2>
+<p><a href="http://espace.inrs.ca/3367/1/Banville,%20Hubert%20J.pdf">Hybrid Brain-Computer Interfaces: Improving Mental Task Classification Performance through Fusion of Neurophysiological Modalities</a><br>
+<strong>Hubert Banville</strong><br>
+MSc thesis, 2015</p>  </div>
 </article>
 
     <footer>
@@ -103,7 +122,7 @@
   "@type" : "Blog",
   "name": " Hubert J. Banville ",
   "url" : "",
-  "image": "",
+  "image": "/images/me.jpg",
   "description": "Academic website and blog"
 }
 </script>
