--- a/src/output/index.html
+++ b/src/output/index.html
@@ -18,8 +18,6 @@
 
 
 
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
 
     <!-- Chrome, Firefox OS and Opera -->
@@ -40,23 +38,23 @@
 <meta property="og:description" content="Academic website and blog"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
+<meta property="og:image" content="/images/me.jpg">
 
-  <title>Hubert J. Banville</title>
+  <title>Hubert J. Banville &ndash; About me</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="">
-        <img src="/theme/img/profile.png" alt="" title="">
+        <img src="/images/me.jpg" alt="Hubert J. Banville" title="Hubert J. Banville">
       </a>
-      <h1><a href=""></a></h1>
+      <h1><a href="">Hubert J. Banville</a></h1>
 
-<p>PhD student @ Inria, Parietal Team <br> Biosignal Researcher @ InteraXon Inc.</p>
+<p><b>PhD student</b> @ Inria, Parietal Team <br> <b>Biosignal Researcher</b> @ InteraXon Inc.</p>
       <nav>
         <ul class="list">
-          <li><a href="/pages/about.html#about">About</a></li>
-          <li><a href="/pages/others.html#others">Others</a></li>
+          <li><a href="/pages/about-me.html#about-me">About me</a></li>
           <li><a href="/pages/research.html#research">Research</a></li>
 
         </ul>
@@ -65,7 +63,7 @@
       <ul class="social">
         <li><a class="sc-github" href="https://github.com/hubertjb" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-linkedin" href="https://linkedin.ca/in/hubertbanville" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="sc-scholar" href="https://scholar.google.com/citations?user=Qoh3xVgAAAAJ&hl=en" target="_blank"><i class="fa fa-scholar"></i></a></li>
+        <li><a class="sc-book" href="https://scholar.google.com/citations?user=Qoh3xVgAAAAJ&hl=en" target="_blank"><i class="fa fa-book"></i></a></li>
       </ul>
     </div>
 
@@ -74,61 +72,36 @@
   <main>
 
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="/disentangling-different-types-of-learning.html#disentangling-different-types-of-learning">Disentangling different types of learning</a></h2>
-    <p>
-          Posted on Sun 16 September 2018 in <a href="/category/research.html">Research</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="/tag/machine-learning.html">Machine learning</a>
-    </p>
+    
+    <h1 id="about-me">About me</h1>
   </header>
   <div>
-      <p>If you're like me, you followed machine learning classes and got told that there are essentially three types of learning regimes in machine learning:</p>
-<ol>
-<li>Supervised learning</li>
-<li>Unsupervised learning</li>
-<li>Reinforcement learning</li>
-</ol>
-<p>And then, unless our experiences differ, you were told that you wouldn't be looking at reinforcement learning because it was too different. </p>
-<p>Fair enough! </p>
-<p>Then you were told that supervised learning is when each example is has a label. Unsupervised learning, on the other hand, is concerned with cases where your examples are not labeled. Different techniques and approaches will then be used based on whether or not labels are available. Got it.</p>
-<p>And then, some day, you heard about something slightly different. "Semi-supervised learning", "self-supervised learning", "self-learning", "weakly supervised learning", "active learning", etc. Hmm, never heard of that. Aren't they all kind of the same thing?</p>
-<p>I recently started looking at these other learning regimes/tasks a bit more …</p>
-      <br>
-      <a class="btn" href="/disentangling-different-types-of-learning.html#disentangling-different-types-of-learning">    Continue reading
-</a>
-  </div>
-  <hr />
+<p>I am a PhD student in the <a href="https://team.inria.fr/parietal/">Parietal team</a> at <a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay, under the supervision of <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis A. Engemann</a>.
+My work is done jointly at <a href="https://choosemuse.com/">InteraXon</a> (maker of the Muse headband).</p>
+<p>My research focuses on learning representations from EEG signals with self-supervised learning.</p>
+<hr>
+<h2>Education</h2>
+<h3>2018-2021 (expected)</h3>
+<p><strong>PhD in Computer Science</strong><br>
+<a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay (Palaiseau, France) &amp; <a href="https://choosemuse.com/">InteraXon Inc.</a> (Toronto, Canada)<br>
+Thesis: "Self-supervised learning for EEG signals"<br>
+Advisors: <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis Engemann</a></p>
+<h3>2013-2015</h3>
+<p><strong>M.Sc. in Telecommunications</strong><br>
+<a href="http://inrs.ca/">Institut national de la recherche scientifique</a> (Montreal, Canada)<br>
+Thesis: "Hybrid Brain-Computer Interfaces: Improving Mental Task Classification Performance through Fusion of Neurophysiological Modalities"<br>
+Advisor: <a href="http://musaelab.ca/team-view/prof-tiago-h-falk/">Tiago H. Falk</a></p>
+<h3>2009-2013</h3>
+<p><strong>B.Eng. in Biomedical Engineering</strong><br>
+<a href="https://www.polymtl.ca/">Polytechnique Montréal</a> (Montreal, Canada)</p>
+<hr>
+<h2>Experience</h2>
+<h3>2015 - current</h3>
+<p><strong>Biosignal Researcher</strong><br>
+<a href="https://choosemuse.com/">InteraXon Inc.</a> (Toronto, Canada)</p>  </div>
 </article>
-<article>
-  <header>
-    <h2><a href="/test-1.html#test-1">Test 1</a></h2>
-    <p>
-          Posted on Thu 06 September 2018 in <a href="/category/test.html">Test</a>
-
-
-
-    </p>
-  </header>
-  <div>
-      <p>Hi!</p>
-      <br>
-      <a class="btn" href="/test-1.html#test-1">    Continue reading
-</a>
-  </div>
-</article>
-
-  <div class="pagination">
-  </div>
-
-
-
 
     <footer>
 <p>&copy;  2019</p>
@@ -145,7 +118,7 @@
   "@type" : "Blog",
   "name": " Hubert J. Banville ",
   "url" : "",
-  "image": "",
+  "image": "/images/me.jpg",
   "description": "Academic website and blog"
 }
 </script>
