--- a/output/pages/research.html
+++ b/output/pages/research.html
@@ -54,7 +54,7 @@
 <p><b>PhD student</b> @ Inria, Parietal Team <br> <b>Biosignal Researcher</b> @ InteraXon Inc.</p>
       <nav>
         <ul class="list">
-          <li><a href="/pages/about-me.html#about-me">About me</a></li>
+          <li><a href="/#about-me">About me</a></li>
           <li><a href="/pages/research.html#research">Research</a></li>
 
         </ul>
