updating research.md

--- a/output/index.html
+++ b/output/index.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Hubert J. Banville Atom">
 
 
 
@@ -112,7 +111,7 @@
     <h1 id="about-me">About me</h1>
   </header>
   <div>
-<p>I am a PhD student in the <a href="https://team.inria.fr/parietal/">Parietal team</a> at <a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay, under the supervision of <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis A. Engemann</a>.
+<p>I am a PhD student in the <a href="https://team.inria.fr/parietal/">Parietal team</a> at <a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay, under the supervision of <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis Engemann</a>.
 My work is done jointly at <a href="https://choosemuse.com/">InteraXon</a> (maker of the Muse headband).</p>
 <p>My research focuses on learning representations from EEG signals with self-supervised learning.</p>
 <hr>
