--- a/output/pages/research.html
+++ b/output/pages/research.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Hubert J. Banville Atom">
 
 
 
@@ -112,36 +111,47 @@
     <h1 id="research">Research</h1>
   </header>
   <div>
-<h2>Journals</h2>
+<h2>Publications</h2>
+<p><a href="https://arxiv.org/abs/2105.12916">Robust learning from corrupted EEG with dynamic spatial filtering</a> <br>
+<strong>Hubert Banville</strong>, Sean U.N Wood, Chris Aimone, Denis Engemann, Alexandre Gramfort<br>
+<em>arXiv</em>, 2021<br>
+[<a href="https://arxiv.org/abs/2105.12916">preprint</a>] [<a href="https://github.com/hubertjb/dynamic-spatial-filtering">code</a>]  </p>
 <p><a href="https://iopscience.iop.org/article/10.1088/1741-2552/abca18/meta">Uncovering the structure of clinical EEG signals with self-supervised learning</a><br>
 <strong>Hubert Banville</strong>, Omar Chehab, Aapo Hyvärinen, Denis Engemann, Alexandre Gramfort<br>
-<em>Journal of Neural Engineering</em>, 2020</p>
+<em>Journal of Neural Engineering</em>, 2020<br>
+[<a href="https://iopscience.iop.org/article/10.1088/1741-2552/abca18/meta">paper</a>] [<a href="https://arxiv.org/abs/2007.16104">preprint</a>] [<a href="https://braindecode.org/auto_examples/plot_relative_positioning.html">code</a>]  </p>
 <p><a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab260c/pdf">Deep learning-based electroencephalography analysis: a systematic review</a><br>
 Yannick Roy*, <strong>Hubert Banville</strong>*, Isabela Albuquerque, Alexandre Gramfort, Tiago H Falk, Jocelyn Faubert<br>
-<em>Journal of Neural Engineering</em>, 2019</p>
-<p><a href="http://downloads.hindawi.com/journals/cin/2017/3524208.pdf">Mental Task Evaluation for Hybrid NIRS-EEG Brain-Computer Interfaces</a><br>
+<em>Journal of Neural Engineering</em>, 2019<br>
+[<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab260c/pdf">paper</a>] [<a href="https://arxiv.org/abs/1901.05498">preprint</a>] [<a href="https://github.com/hubertjb/dl-eeg-review">code</a>] </p>
+<p><a href="http://downloads.hindawi.com/journals/cin/2017/3524208.pdf">Mental task evaluation for hybrid NIRS-EEG brain-computer interfaces</a><br>
 <strong>Hubert Banville</strong>, Rishabh Gupta, Tiago H. Falk<br>
-<em>Computational Intelligence and Neuroscience</em>, 2017</p>
+<em>Computational Intelligence and Neuroscience</em>, 2017<br>
+[<a href="http://downloads.hindawi.com/journals/cin/2017/3524208.pdf">paper</a>]  </p>
 <p><a href="https://www.tandfonline.com/doi/abs/10.1080/2326263X.2015.1134958">Recent advances and open challenges in hybrid brain-computer interfacing: a technological review of non-invasive human research</a><br>
 <strong>Hubert Banville</strong>, Tiago H. Falk<br>
-<em>Brain-Computer Interfaces</em>, 2016</p>
+<em>Brain-Computer Interfaces</em>, 2016<br>
+[<a href="https://www.tandfonline.com/doi/abs/10.1080/2326263X.2015.1134958">paper</a>]  </p>
 <h2>Conferences and workshops</h2>
-<p><a href="">Self-supervised representation learning from electroencephalography signals</a><br>
+<p><a href="https://ieeexplore.ieee.org/document/8918693/">Self-supervised representation learning from electroencephalography signals</a><br>
 <strong>Hubert Banville</strong>, Isabela Albuquerque, Aapo Hyvärinen, Graeme Moffat, Denis Engemann, Alexandre Gramfort<br>
-<em>IEEE International Workshop on Machine Learning for Signal Processing</em>, 2019</p>
+<em>IEEE International Workshop on Machine Learning for Signal Processing</em>, 2019<br>
+[<a href="https://ieeexplore.ieee.org/document/8918693/">paper</a>] [<a href="https://arxiv.org/abs/1911.05419">preprint</a>]  </p>
 <p><a href="">EEG 101: A practical, interactive, free &amp; open source app for use with low-cost mobile EEG in neuroscience education</a><br>
 Dano Morisson, <strong>Hubert Banville</strong>, Tom McNeely, Nicole Proulx, Graeme Moffat, Geordan King<br>
-<em>Society for Neuroscience</em>, 2018</p>
-<p><a href="https://www.sciencedirect.com/science/article/pii/B9780128119266000579">Toward Mental Workload Measurement Using Multimodal EEG–fNIRS Monitoring</a><br>
+<em>Society for Neuroscience</em>, 2018<br>
+[<a href="https://github.com/NeuroTechX/eeg-101">code</a>]  </p>
+<p><a href="https://www.sciencedirect.com/science/article/pii/B9780128119266000579">Toward mental workload measurement using multimodal EEG–fNIRS monitoring</a><br>
 <strong>Hubert Banville</strong>, Mark Parent, Sébastien Tremblay, Tiago H. Falk<br>
-<em>International Neuroergonomics Conference</em>, 2016</p>
+<em>International Neuroergonomics Conference</em>, 2016  </p>
 <p><a href="http://musaelab.ca/pdfs/C90A.pdf">MuLES: An open source EEG acquisition and streaming server for quick and simple prototyping and recording</a><br>
 Raymundo Cassani, <strong>Hubert Banville</strong>, Tiago H. Falk<br>
-<em>International Conference on Intelligent User Interfaces Companion</em>, 2015</p>
+<em>International Conference on Intelligent User Interfaces Companion</em>, 2015<br>
+[<a href="https://github.com/MuSAELab/MuLES">code</a>]  </p>
 <h2>Others</h2>
-<p><a href="http://espace.inrs.ca/3367/1/Banville,%20Hubert%20J.pdf">Hybrid Brain-Computer Interfaces: Improving Mental Task Classification Performance through Fusion of Neurophysiological Modalities</a><br>
+<p><a href="http://espace.inrs.ca/3367/1/Banville,%20Hubert%20J.pdf">Hybrid brain-computer interfaces: Improving mental task classification performance through fusion of neurophysiological modalities</a><br>
 <strong>Hubert Banville</strong><br>
-MSc thesis, 2015</p>  </div>
+MSc thesis, 2015  </p>  </div>
 </article>
 
     <footer>
