--- a/output/pages/research.html
+++ b/output/pages/research.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
+    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Hubert J. Banville Atom">
 
 
 
