--- a/output/index.html
+++ b/output/index.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Hubert J. Banville Atom">
 
 
 
@@ -61,7 +60,7 @@
         <a href="">Hubert J. Banville</a>
       </h1>
 
-<p><b>PhD student</b> @ Inria, Parietal Team <br> <b>Biosignal Researcher</b> @ InteraXon Inc.</p>
+<p><b>Research Scientist</b> @ InteraXon</p>
 
       <nav>
         <ul class="list">
@@ -99,6 +98,11 @@
               <i class="fab fa-book"></i>
             </a>
           </li>
+          <li>
+            <a  class="sc-twitter" href="https://twitter.com/hubertjbanville" target="_blank">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
       </ul>
     </div>
 
@@ -112,33 +116,33 @@
     <h1 id="about-me">About me</h1>
   </header>
   <div>
-<p>I am a PhD student in the <a href="https://team.inria.fr/parietal/">Parietal team</a> at <a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay, under the supervision of <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis Engemann</a>.
-My work is done jointly at <a href="https://choosemuse.com/">InteraXon</a> (maker of the Muse headband).</p>
-<p>My research focuses on learning representations from EEG signals with self-supervised learning.</p>
+<p>I currently work as a Research Scientist at <a href="https://choosemuse.com/">InteraXon</a> (maker of the Muse headband).</p>
+<p>I completed a PhD in the <a href="https://team.inria.fr/parietal/">Parietal team</a> at <a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay, under the supervision of <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis Engemann</a>. This work was done jointly at <a href="https://choosemuse.com/">InteraXon</a>.</p>
+<p>My research focuses on machine learning for processing EEG and other biosignals.</p>
 <hr>
 <h2>Education</h2>
-<h3>2018-2021 (expected)</h3>
-<p><strong>PhD in Computer Science</strong><br>
+<h3>2018-2022</h3>
+<p><strong>Ph.D. in Computer Science</strong><br>
 <a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay (Palaiseau, France) &amp; <a href="https://choosemuse.com/">InteraXon Inc.</a> (Toronto, Canada)<br>
-Thesis: "Self-supervised learning for EEG signals"<br>
+Thesis: "Enabling real-world EEG applications with deep learning"<br>
 Advisors: <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis Engemann</a></p>
 <h3>2013-2015</h3>
 <p><strong>M.Sc. in Telecommunications</strong><br>
 <a href="http://inrs.ca/">Institut national de la recherche scientifique</a> (Montreal, Canada)<br>
-Thesis: "Hybrid Brain-Computer Interfaces: Improving Mental Task Classification Performance through Fusion of Neurophysiological Modalities"<br>
+Thesis: "Hybrid brain-computer interfaces: Improving mental task classification performance through fusion of neurophysiological modalities"<br>
 Advisor: <a href="http://musaelab.ca/team-view/prof-tiago-h-falk/">Tiago H. Falk</a></p>
 <h3>2009-2013</h3>
 <p><strong>B.Eng. in Biomedical Engineering</strong><br>
 <a href="https://www.polymtl.ca/">Polytechnique Montréal</a> (Montreal, Canada)</p>
 <hr>
 <h2>Experience</h2>
-<h3>2015 - current</h3>
-<p><strong>Biosignal Researcher</strong><br>
+<h3>2015 - Current</h3>
+<p><strong>Research Scientist</strong> (previously Biosignal Researcher)<br>
 <a href="https://choosemuse.com/">InteraXon Inc.</a> (Toronto, Canada)</p>  </div>
 </article>
 
     <footer>
-<p>&copy; 2021 </p>
+<p>&copy; 2022 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
 </p>    </footer>
