--- a/output/tags.html
+++ b/output/tags.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Hubert J. Banville Atom">
 
 
 
@@ -59,7 +58,7 @@
         <a href="">Hubert J. Banville</a>
       </h1>
 
-<p><b>PhD student</b> @ Inria, Parietal Team <br> <b>Biosignal Researcher</b> @ InteraXon Inc.</p>
+<p><b>Research Scientist</b> @ InteraXon</p>
 
       <nav>
         <ul class="list">
@@ -97,6 +96,11 @@
               <i class="fab fa-book"></i>
             </a>
           </li>
+          <li>
+            <a  class="sc-twitter" href="https://twitter.com/hubertjbanville" target="_blank">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
       </ul>
     </div>
 
@@ -114,7 +118,7 @@
 </article>
 
     <footer>
-<p>&copy; 2021 </p>
+<p>&copy; 2022 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
 </p>    </footer>
