--- a/output/index.html
+++ b/output/index.html
@@ -60,7 +60,7 @@
         <a href="">Hubert J. Banville</a>
       </h1>
 
-<p><b>Research Scientist</b> @ InteraXon</p>
+<p><b>AI Research Scientist</b> @ Meta AI</p>
 
       <nav>
         <ul class="list">
@@ -116,9 +116,9 @@
     <h1 id="about-me">About me</h1>
   </header>
   <div>
-<p>I currently work as a Research Scientist at <a href="https://choosemuse.com/">InteraXon</a> (maker of the Muse headband).</p>
+<p>I currently work as a Research Scientist at Meta AI in the Brain &amp; AI group. Previously, I was a Research Scientist at <a href="https://choosemuse.com/">InteraXon</a> (maker of the Muse headband).</p>
 <p>I completed a PhD in the <a href="https://team.inria.fr/parietal/">Parietal team</a> at <a href="https://www.inria.fr/en/centre/saclay">Inria</a>, Université Paris-Saclay, under the supervision of <a href="http://alexandre.gramfort.net/">Alexandre Gramfort</a> and <a href="https://denis-engemann.de/">Denis Engemann</a>. This work was done jointly at <a href="https://choosemuse.com/">InteraXon</a>.</p>
-<p>My research focuses on machine learning for processing EEG and other biosignals.</p>
+<p>My research focuses on machine learning for the decoding and processing of neuroimaging data.</p>
 <hr>
 <h2>Education</h2>
 <h3>2018-2022</h3>
@@ -136,7 +136,10 @@ Advisor: <a href="http://musaelab.ca/team-view/prof-tiago-h-falk/">Tiago H. Falk
 <a href="https://www.polymtl.ca/">Polytechnique Montréal</a> (Montreal, Canada)</p>
 <hr>
 <h2>Experience</h2>
-<h3>2015 - Current</h3>
+<h3>2022 - Current</h3>
+<p><strong>AI Research Scientist</strong><br>
+Meta AI (London, United Kingdom)</p>
+<h3>2015 - 2022</h3>
 <p><strong>Research Scientist</strong> (previously Biosignal Researcher)<br>
 <a href="https://choosemuse.com/">InteraXon Inc.</a> (Toronto, Canada)</p>  </div>
 </article>
