--- a/output/pages/research.html
+++ b/output/pages/research.html
@@ -60,7 +60,7 @@
         <a href="">Hubert J. Banville</a>
       </h1>
 
-<p><b>Research Scientist</b> @ InteraXon</p>
+<p><b>AI Research Scientist</b> @ Meta AI</p>
 
       <nav>
         <ul class="list">
@@ -117,14 +117,14 @@
   </header>
   <div>
 <h2>Publications</h2>
+<p><a href="https://www.sciencedirect.com/science/article/pii/S105381192200636X">A reusable benchmark of brain-age prediction from M/EEG resting-state signals</a><br>
+Denis Engemann, Apolline Mellot, Richard Höchenberger, <strong>Hubert Banville</strong>, David Sabbagh, Lukas Gemein, Tonio Ball, Alexandre Gramfort<br>
+<em>NeuroImage</em>, 2022<br>
+[<a href="https://www.sciencedirect.com/science/article/pii/S105381192200636X">paper</a>] [<a href="https://www.biorxiv.org/content/10.1101/2021.12.14.472691v1.full">preprint</a>] [<a href="https://github.com/meeg-ml-benchmarks/meeg-brain-age-benchmark-paper">code</a>]</p>
 <p><a href="https://www.sciencedirect.com/science/article/pii/S1053811922001239">Robust learning from corrupted EEG with dynamic spatial filtering</a><br>
 <strong>Hubert Banville</strong>, Sean U.N. Wood, Chris Aimone, Denis Engemann, Alexandre Gramfort<br>
 <em>NeuroImage</em>, 2022<br>
 [<a href="https://www.sciencedirect.com/science/article/pii/S1053811922001239">paper</a>] [<a href="https://arxiv.org/abs/2105.12916">preprint</a>] [<a href="https://github.com/hubertjb/dynamic-spatial-filtering">code</a>]</p>
-<p><a href="https://www.biorxiv.org/content/10.1101/2021.12.14.472691v1.full">A reusable benchmark of brain-age prediction from M/EEG resting-state signals</a><br>
-Denis Engemann, Apolline Mellot, Richard Höchenberger, <strong>Hubert Banville</strong>, David Sabbagh, Lukas Gemein, Tonio Ball, Alexandre Gramfort<br>
-<em>biorXiv</em>, 2021<br>
-[<a href="https://www.biorxiv.org/content/10.1101/2021.12.14.472691v1.full">preprint</a>] [<a href="https://github.com/meeg-ml-benchmarks/meeg-brain-age-benchmark-paper">code</a>]</p>
 <p><a href="https://iopscience.iop.org/article/10.1088/1741-2552/abca18/meta">Uncovering the structure of clinical EEG signals with self-supervised learning</a><br>
 <strong>Hubert Banville</strong>, Omar Chehab, Aapo Hyvärinen, Denis Engemann, Alexandre Gramfort<br>
 <em>Journal of Neural Engineering</em>, 2020<br>
