--- a/output/tags.html
+++ b/output/tags.html
@@ -58,7 +58,7 @@
         <a href="">Hubert J. Banville</a>
       </h1>
 
-<p><b>Research Scientist</b> @ InteraXon</p>
+<p><b>AI Research Scientist</b> @ Meta AI</p>
 
       <nav>
         <ul class="list">
